# cardparty-api

./: .gitignore  Cargo.toml  README.md  linter.txt  log.txt  ports.txt  tasksedziu.txt
migrations/2024-08-05-175944_create_users/: down.sql  up.sql
src/: auth.rs  claim.rs  ids.rs  lib.rs  main.rs  models.rs  schema.rs  styleguide.txt
src/api_structures/: api_state.rs  database.rs  errors.rs  id.rs  messages.rs  mod.rs  packet_parser.rs  session.rs  session_connection.rs  websocket_communicator.rs
src/api_structures/card_game/: card_renderer.rs  deck.rs  game_state.rs  mod.rs
src/api_structures/managers/: game_manager.rs  mod.rs  session_manager.rs
src/database/: database.rs
src/grammar/: segment.pest
src/scopes/: mod.rs
src/scopes/game_session/: game.rs
src/scopes/user/: mod.rs  user.rs
