[package]
name = "cardparty-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.7.0"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.203", features = ["serde_derive"]}
serde_json = "1.0.117"
uuid = {version = "1.10.0", features = ["v4", "serde"]}
chrono = { version = "0.4.38", features = ["serde"] }
actix-web-actors = "4.3.0"
env_logger = "0.11.5"
log = "0.4.22"
dotenv = "0.15.0"
